# python-project-template

./: .cursorrules  EVAL_PLAN.md  LICENSE  README.md  copier.yml  mypy.ini  project-directory.md  pyproject.toml
context/: 01_SPEC.md  02_PLAN.md  03_CONSTRAINTS.md  04_PROTOCOL.md  05_DATA_MANIFEST.md  06_MODEL_MANIFEST.md  09_DECISIONS.md  10_DEPLOYMENT.md
docs/: index.md  project-structure.md
scripts/: bootstrap.sh
src/[[ package_slug ]]/agents/: __init__.py
src/{{ package_slug }}/: cli.py
src/{{ package_slug }}/agents/: protocols.py
src/{{ package_slug }}/core/: __init__.py  agent.py  system.py
src/{{ package_slug }}/utils/: logging.py
tests/: test_smoke.py
{{ project_slug }}/: .gitignore  .pre-commit-config.yaml  .ruff.toml  DATA_MANIFEST.md  GLOSSARY.md  MODEL_MANIFEST.md  README.md  TODO.md  copier.yml
{{ project_slug }}/.github/workflows/: ci.yml
{{ project_slug }}/docs/: index.md
{{ project_slug }}/src/{{ package_slug }}/: __init__.py  cli.py
{{ project_slug }}/src/{{ package_slug }}/core/: exceptions.py  system.py
{{ project_slug }}/src/{{ package_slug }}/utils/: __init__.py  config.py  logging.py  validation.py
{{ project_slug }}/tests/: test_smoke.py
{{ project_slug }}/tools/: precommit-msg.sh
